--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Register</title>
+    <link rel="stylesheet" href="popupS.css">
   </head>
   <body>
     <form action="/register" method="post">
-      <input type="email" name="email">
-      <input type="password" name="password">
+      <label for="email">Email</label>
+      <input type="email" name="email"><br>
+      <label for="password">Password</label>
+      <input type="password" name="password"><br>
       <button type="submit" name="button">Sign Up</button>
     </form>
   </body>
 </html>
+
